add major increment of results work

--- a/notebooks/Compare Predictions/Gaussians 3Centers 4Features/Tribuo Predictions 5000C3F4.ipynb
+++ b/notebooks/Compare Predictions/Gaussians 3Centers 4Features/Tribuo Predictions 5000C3F4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This generates Tribuo Hdbscan predictions from scenarios also used for unit tests"
+    "## This generates Tribuo Hdbscan predictions from dataset: 5000 records, 3 centers, 4 features"
    ]
   },
   {
@@ -67,12 +67,14 @@
     "regexMappingProcessors.put(\"Feature1\", new DoubleFieldProcessor(\"Feature1\"));\n",
     "regexMappingProcessors.put(\"Feature2\", new DoubleFieldProcessor(\"Feature2\"));\n",
     "regexMappingProcessors.put(\"Feature3\", new DoubleFieldProcessor(\"Feature3\"));\n",
-    "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor,regexMappingProcessors);\n",
-    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/basic-gaussians-train.csv\"),rowProcessor,false);\n",
+    "regexMappingProcessors.put(\"Feature4\", new DoubleFieldProcessor(\"Feature4\"));\n",
+    "\n",
+    "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor, regexMappingProcessors);\n",
+    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/big-gaussians-3centers-train.csv\"), rowProcessor, false);\n",
     "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);\n",
     "\n",
-    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/basic-gaussians-predict.csv\"),rowProcessor,false);\n",
-    "Dataset<ClusterID> predictSet = new MutableDataset<>(csvTestSource);"
+    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/big-gaussians-3centers-predict.csv\"),rowProcessor,false);\n",
+    "Dataset<ClusterID> predictSet = new MutableDataset<>(csvTestSource);\n"
    ]
   },
   {
@@ -84,8 +86,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data size = 1980, number of features = 3\n",
-      "Predict Data size = 20, number of features = 3\n"
+      "Data size = 4000, number of features = 4\n",
+      "Predict Data size = 1000, number of features = 4\n"
      ]
     }
    ],
@@ -100,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var trainer = new HdbscanTrainer(7, HdbscanTrainer.Distance.EUCLIDEAN, 7,1);\n",
+    "var trainer = new HdbscanTrainer(8, HdbscanTrainer.Distance.EUCLIDEAN, 8, 2);\n",
     "var model = trainer.train(dataset);"
    ]
   },
@@ -113,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1980\n"
+      "4000\n"
      ]
     }
    ],
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 3, 5, 5, 3, 5, 4, 4, 5, 3, 3, 3, 3, 4, 4, 5, 4, 5, 5, 4]\n"
+      "[4, 2, 2, 2, 5, 5, 5, 2, 5, 5, 5, 2, 4, 4, 5, 2, 2, 4, 4, 4, 5, 5, 4, 2, 5, 5, 5, 2, 4, 5, 4, 4, 2, 4, 2, 5, 5, 2, 4, 4, 5, 5, 5, 5, 2, 2, 4, 4, 5, 5, 2, 2, 2, 4, 2, 2, 5, 5, 4, 4, 4, 4, 5, 5, 5, 4, 2, 5, 4, 4, 5, 4, 2, 5, 2, 4, 4, 5, 5, 4, 5, 4, 5, 2, 2, 5, 2, 5, 4, 2, 5, 5, 5, 4, 2, 2, 5, 5, 5, 2, 4, 2, 2, 5, 5, 5, 4, 5, 4, 4, 5, 5, 5, 5, 2, 5, 4, 4, 4, 4, 4, 2, 2, 2, 4, 2, 5, 2, 4, 4, 5, 4, 5, 5, 5, 2, 5, 5, 4, 4, 2, 4, 5, 2, 5, 2, 2, 4, 4, 4, 2, 2, 2, 2, 5, 5, 5, 4, 2, 2, 5, 2, 5, 5, 4, 2, 2, 5, 4, 5, 2, 4, 4, 5, 4, 4, 5, 2, 5, 4, 5, 4, 2, 5, 4, 4, 4, 2, 5, 2, 5, 2, 2, 5, 5, 5, 4, 2, 4, 4, 5, 4, 4, 4, 5, 4, 5, 2, 5, 2, 5, 5, 5, 5, 5, 2, 2, 5, 5, 4, 5, 5, 2, 2, 4, 5, 5, 4, 2, 4, 4, 4, 4, 4, 4, 4, 5, 5, 4, 5, 5, 2, 5, 2, 5, 2, 5, 2, 4, 5, 5, 2, 5, 2, 4, 4, 4, 4, 5, 4, 4, 5, 2, 5, 2, 4, 4, 4, 4, 5, 4, 2, 2, 4, 5, 5, 4, 5, 5, 4, 2, 4, 5, 2, 5, 5, 2, 5, 5, 5, 2, 5, 2, 2, 5, 5, 4, 5, 4, 4, 5, 5, 2, 5, 4, 2, 5, 2, 5, 5, 5, 2, 5, 5, 5, 4, 4, 2, 2, 5, 5, 5, 2, 2, 4, 5, 4, 5, 4, 5, 5, 2, 4, 5, 5, 2, 4, 2, 2, 5, 5, 4, 2, 2, 2, 4, 5, 5, 2, 4, 5, 2, 5, 5, 5, 5, 5, 4, 4, 5, 2, 2, 4, 2, 5, 4, 2, 4, 5, 5, 5, 2, 4, 2, 4, 2, 4, 2, 2, 4, 5, 4, 4, 4, 2, 4, 4, 2, 4, 5, 4, 4, 5, 2, 5, 5, 5, 2, 4, 2, 2, 2, 5, 5, 2, 5, 5, 4, 4, 4, 4, 2, 4, 2, 4, 2, 2, 2, 2, 5, 5, 2, 2, 5, 5, 4, 4, 4, 2, 5, 5, 2, 5, 5, 2, 5, 2, 5, 4, 2, 4, 5, 2, 2, 2, 4, 4, 5, 5, 4, 4, 5, 5, 2, 4, 2, 2, 2, 2, 4, 5, 5, 5, 4, 2, 4, 2, 5, 4, 5, 2, 5, 4, 4, 4, 2, 4, 5, 2, 2, 2, 5, 2, 4, 5, 4, 2, 5, 4, 5, 2, 4, 2, 2, 5, 5, 2, 5, 4, 4, 5, 2, 2, 4, 2, 4, 5, 4, 5, 4, 5, 2, 4, 4, 4, 5, 2, 2, 2, 4, 2, 4, 5, 5, 5, 5, 4, 2, 5, 4, 2, 4, 4, 5, 5, 2, 5, 2, 5, 5, 2, 2, 2, 2, 2, 4, 5, 5, 4, 5, 2, 4, 5, 5, 4, 4, 4, 5, 5, 2, 4, 2, 4, 4, 4, 5, 5, 4, 5, 2, 2, 2, 5, 5, 2, 2, 4, 2, 4, 2, 5, 2, 2, 2, 2, 5, 5, 5, 2, 5, 5, 2, 5, 2, 5, 2, 4, 4, 5, 4, 2, 4, 5, 2, 5, 5, 2, 2, 4, 4, 5, 4, 5, 4, 2, 2, 2, 5, 5, 5, 2, 2, 2, 2, 5, 2, 4, 4, 2, 5, 4, 2, 5, 2, 5, 2, 2, 4, 2, 2, 5, 2, 4, 4, 4, 5, 4, 5, 5, 2, 2, 5, 4, 5, 5, 5, 5, 2, 4, 4, 5, 2, 5, 2, 2, 4, 5, 5, 2, 5, 2, 2, 5, 4, 2, 2, 5, 4, 4, 2, 4, 2, 2, 4, 4, 5, 2, 2, 4, 2, 4, 2, 4, 4, 2, 2, 2, 4, 2, 5, 4, 5, 2, 4, 4, 2, 4, 2, 4, 5, 2, 5, 5, 5, 5, 5, 5, 5, 2, 5, 5, 4, 2, 2, 2, 2, 2, 2, 2, 4, 2, 4, 4, 2, 5, 4, 4, 5, 5, 2, 4, 2, 5, 2, 5, 2, 5, 2, 2, 2, 4, 2, 5, 5, 2, 4, 2, 4, 5, 2, 5, 2, 4, 5, 4, 2, 4, 4, 5, 5, 2, 2, 5, 4, 5, 2, 2, 2, 4, 5, 4, 2, 4, 5, 4, 2, 5, 5, 4, 4, 2, 2, 4, 5, 5, 5, 2, 5, 4, 4, 5, 5, 5, 4, 4, 2, 5, 2, 4, 5, 5, 2, 4, 5, 4, 5, 2, 5, 5, 2, 4, 4, 5, 4, 2, 2, 4, 4, 4, 5, 2, 2, 2, 2, 4, 5, 5, 2, 2, 5, 4, 4, 2, 5, 2, 5, 2, 2, 5, 5, 4, 2, 4, 5, 2, 2, 4, 2, 4, 4, 4, 5, 4, 4, 4, 5, 2, 5, 5, 2, 5, 4, 2, 2, 4, 5, 2, 4, 2, 4, 5, 5, 5, 2, 5, 4, 2, 2, 5, 4, 5, 4, 5, 4, 4, 5, 5, 4, 2, 4, 2, 5, 2, 2, 2, 5, 2, 2, 2, 5, 5, 4, 5, 4, 4, 4, 4, 5, 5, 2, 2, 2, 5, 2, 5, 5, 4, 2, 5, 5, 5, 2, 2, 2, 2, 2, 2, 2, 4, 5, 4, 2, 2, 5, 2, 5, 2, 4, 2, 4, 2, 5, 5, 4, 4, 4, 5, 2, 5, 2, 2, 2, 2, 2, 4, 2, 5, 5, 5, 2, 4, 2, 4, 4, 5, 4, 2, 2, 4, 5, 4, 2, 4, 5, 4, 4, 2, 2, 4, 4, 5, 5, 2, 2, 4, 2, 5, 2, 4, 4]\n"
      ]
     }
    ],
