--- a/notebooks/Compare Predictions/Tribuo Unit Tests/hdbscan vs Tribuo Predictions Tribuo Unit Tests.ipynb
+++ b/notebooks/Compare Predictions/Tribuo Unit Tests/hdbscan vs Tribuo Predictions Tribuo Unit Tests.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook compares the predictions from the Python hdbscan module to the Tribuo Hdbscan implementation"
+    "## This notebook compares the predictions from the Python hdbscan module to the Tribuo HDBSCAN* implementation"
    ]
   },
   {
