--- a/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
+++ b/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This generates Tribuo Hdbscan predictions from scenarios also used for unit tests"
+    "## This notebook measures Tribuo Hdbscan performance with the credit card data"
    ]
   },
   {
@@ -64,15 +64,27 @@
     "ClusteringFactory clusteringFactory = new ClusteringFactory();\n",
     "ResponseProcessor<ClusterID> emptyResponseProcessor = new EmptyResponseProcessor<>(clusteringFactory);\n",
     "Map<String, FieldProcessor> regexMappingProcessors = new HashMap<>();\n",
-    "regexMappingProcessors.put(\"Feature1\", new DoubleFieldProcessor(\"Feature1\"));\n",
-    "regexMappingProcessors.put(\"Feature2\", new DoubleFieldProcessor(\"Feature2\"));\n",
-    "regexMappingProcessors.put(\"Feature3\", new DoubleFieldProcessor(\"Feature3\"));\n",
-    "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor,regexMappingProcessors);\n",
-    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/basic-gaussians-train.csv\"),rowProcessor,false);\n",
-    "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);\n",
+    "regexMappingProcessors.put(\"BALANCE\", new DoubleFieldProcessor(\"BALANCE\"));\n",
+    "regexMappingProcessors.put(\"BALANCE_FREQUENCY\", new DoubleFieldProcessor(\"BALANCE_FREQUENCY\"));\n",
+    "regexMappingProcessors.put(\"PURCHASES\", new DoubleFieldProcessor(\"PURCHASES\"));\n",
+    "regexMappingProcessors.put(\"ONEOFF_PURCHASES\", new DoubleFieldProcessor(\"ONEOFF_PURCHASES\"));\n",
+    "regexMappingProcessors.put(\"INSTALLMENTS_PURCHASES\", new DoubleFieldProcessor(\"INSTALLMENTS_PURCHASES\"));\n",
+    "regexMappingProcessors.put(\"CASH_ADVANCE\", new DoubleFieldProcessor(\"CASH_ADVANCE\"));\n",
+    "regexMappingProcessors.put(\"PURCHASES_FREQUENCY\", new DoubleFieldProcessor(\"PURCHASES_FREQUENCY\"));\n",
+    "regexMappingProcessors.put(\"ONEOFF_PURCHASES_FREQUENCY\", new DoubleFieldProcessor(\"ONEOFF_PURCHASES_FREQUENCY\"));\n",
+    "regexMappingProcessors.put(\"PURCHASES_INSTALLMENTS_FREQUENCY\", new DoubleFieldProcessor(\"PURCHASES_INSTALLMENTS_FREQUENCY\"));\n",
+    "regexMappingProcessors.put(\"CASH_ADVANCE_FREQUENCY\", new DoubleFieldProcessor(\"CASH_ADVANCE_FREQUENCY\"));\n",
+    "regexMappingProcessors.put(\"CASH_ADVANCE_TRX\", new DoubleFieldProcessor(\"CASH_ADVANCE_TRX\"));\n",
+    "regexMappingProcessors.put(\"PURCHASES_TRX\", new DoubleFieldProcessor(\"PURCHASES_TRX\"));\n",
+    "regexMappingProcessors.put(\"CREDIT_LIMIT\", new DoubleFieldProcessor(\"CREDIT_LIMIT\"));\n",
+    "regexMappingProcessors.put(\"PAYMENTS\", new DoubleFieldProcessor(\"PAYMENTS\"));\n",
+    "regexMappingProcessors.put(\"MINIMUM_PAYMENTS\", new DoubleFieldProcessor(\"MINIMUM_PAYMENTS\"));\n",
+    "regexMappingProcessors.put(\"PRC_FULL_PAYMENT\", new DoubleFieldProcessor(\"PRC_FULL_PAYMENT\"));\n",
+    "regexMappingProcessors.put(\"TENURE\", new DoubleFieldProcessor(\"TENURE\"));\n",
     "\n",
-    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/basic-gaussians-predict.csv\"),rowProcessor,false);\n",
-    "Dataset<ClusterID> predictSet = new MutableDataset<>(csvTestSource);"
+    "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor, regexMappingProcessors);\n",
+    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/cleanedCC.csv\"), rowProcessor, false);\n",
+    "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);"
    ]
   },
   {
@@ -84,24 +96,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data size = 1980, number of features = 3\n",
-      "Predict Data size = 20, number of features = 3\n"
+      "Data size = 8949, number of features = 17\n"
      ]
     }
    ],
    "source": [
-    "System.out.println(String.format(\"Data size = %d, number of features = %d\",dataset.size(),dataset.getFeatureMap().size()));\n",
-    "System.out.println(String.format(\"Predict Data size = %d, number of features = %d\",predictSet.size(),predictSet.getFeatureMap().size()));\n"
+    "System.out.println(String.format(\"Data size = %d, number of features = %d\",dataset.size(),dataset.getFeatureMap().size()));\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took (00:00:04:085)\n"
+     ]
+    }
+   ],
    "source": [
-    "var trainer = new HdbscanTrainer(7, HdbscanTrainer.Distance.EUCLIDEAN, 7,1);\n",
-    "var model = trainer.train(dataset);"
+    "var trainer = new HdbscanTrainer(5, HdbscanTrainer.Distance.EUCLIDEAN, 5, 4);\n",
+    "var startTime = System.currentTimeMillis();\n",
+    "var model = trainer.train(dataset);\n",
+    "var endTime = System.currentTimeMillis();\n",
+    "System.out.println(\"Training took \" + Util.formatDuration(startTime,endTime));\n",
+    "\n",
+    "// run 1\n",
+    "// time 4.01s\n",
+    "\n",
+    "// run 2\n",
+    "// time \n",
+    "\n",
+    "// run 3\n",
+    "// time "
    ]
   },
   {
@@ -113,69 +143,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1980\n"
+      "8949\n"
      ]
     }
    ],
    "source": [
     "System.out.println(model.getClusterLabels().size());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// System.out.println(model.getClusterLabels());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// System.out.println(model.getOutlierScores());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "List<Prediction<ClusterID>> predictions = model.predict(predictSet);\n",
-    "int i = 0;\n",
-    "List<Integer> actualLabelPredictions = new ArrayList<>();\n",
-    "for (Prediction<ClusterID> pred : predictions) {\n",
-    "    actualLabelPredictions.add(pred.getOutput().getID());\n",
-    "    i++;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 3, 5, 5, 3, 5, 4, 4, 5, 3, 3, 3, 3, 4, 4, 5, 4, 5, 5, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "System.out.println(actualLabelPredictions)"
    ]
   },
   {
