--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This generates Tribuo Hdbscan predictions from scenarios also used for unit tests"
+    "## This notebook measures Tribuo Hdbscan performance with the Gaussian 50000 data"
    ]
   },
   {
@@ -67,12 +67,14 @@
     "regexMappingProcessors.put(\"Feature1\", new DoubleFieldProcessor(\"Feature1\"));\n",
     "regexMappingProcessors.put(\"Feature2\", new DoubleFieldProcessor(\"Feature2\"));\n",
     "regexMappingProcessors.put(\"Feature3\", new DoubleFieldProcessor(\"Feature3\"));\n",
-    "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor,regexMappingProcessors);\n",
-    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/basic-gaussians-train.csv\"),rowProcessor,false);\n",
-    "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);\n",
+    "regexMappingProcessors.put(\"Feature4\", new DoubleFieldProcessor(\"Feature4\"));\n",
+    "regexMappingProcessors.put(\"Feature5\", new DoubleFieldProcessor(\"Feature5\"));\n",
+    "regexMappingProcessors.put(\"Feature6\", new DoubleFieldProcessor(\"Feature6\"));\n",
+    "regexMappingProcessors.put(\"Feature7\", new DoubleFieldProcessor(\"Feature7\"));\n",
     "\n",
-    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/basic-gaussians-predict.csv\"),rowProcessor,false);\n",
-    "Dataset<ClusterID> predictSet = new MutableDataset<>(csvTestSource);"
+    "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor, regexMappingProcessors);\n",
+    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/verybig-gaussians-6centers.csv\"), rowProcessor, false);\n",
+    "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);"
    ]
   },
   {
@@ -84,24 +86,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data size = 1980, number of features = 3\n",
-      "Predict Data size = 20, number of features = 3\n"
+      "Data size = 50000, number of features = 7\n"
      ]
     }
    ],
    "source": [
-    "System.out.println(String.format(\"Data size = %d, number of features = %d\",dataset.size(),dataset.getFeatureMap().size()));\n",
-    "System.out.println(String.format(\"Predict Data size = %d, number of features = %d\",predictSet.size(),predictSet.getFeatureMap().size()));\n"
+    "System.out.println(String.format(\"Data size = %d, number of features = %d\",dataset.size(),dataset.getFeatureMap().size()));\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took (00:01:25:574)\n"
+     ]
+    }
+   ],
    "source": [
-    "var trainer = new HdbscanTrainer(7, HdbscanTrainer.Distance.EUCLIDEAN, 7,1);\n",
-    "var model = trainer.train(dataset);"
+    "var trainer = new HdbscanTrainer(10, HdbscanTrainer.Distance.EUCLIDEAN, 10, 4);\n",
+    "var startTime = System.currentTimeMillis();\n",
+    "var model = trainer.train(dataset);\n",
+    "var endTime = System.currentTimeMillis();\n",
+    "System.out.println(\"Training took \" + Util.formatDuration(startTime,endTime));\n",
+    "\n",
+    "// run 1\n",
+    "// time 85.6s\n",
+    "\n",
+    "// run 2\n",
+    "// time \n",
+    "\n",
+    "// run 3\n",
+    "// time "
    ]
   },
   {
@@ -113,69 +133,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1980\n"
+      "50000\n"
      ]
     }
    ],
    "source": [
     "System.out.println(model.getClusterLabels().size());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// System.out.println(model.getClusterLabels());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// System.out.println(model.getOutlierScores());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "List<Prediction<ClusterID>> predictions = model.predict(predictSet);\n",
-    "int i = 0;\n",
-    "List<Integer> actualLabelPredictions = new ArrayList<>();\n",
-    "for (Prediction<ClusterID> pred : predictions) {\n",
-    "    actualLabelPredictions.add(pred.getOutput().getID());\n",
-    "    i++;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 3, 5, 5, 3, 5, 4, 4, 5, 3, 3, 3, 3, 4, 4, 5, 4, 5, 5, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "System.out.println(actualLabelPredictions)"
    ]
   },
   {
