add the initial test results

--- a/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
+++ b/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took (00:00:04:085)\n"
+      "Training took (00:00:04:200)\n"
      ]
     }
    ],
@@ -128,10 +128,10 @@
     "// time 4.01s\n",
     "\n",
     "// run 2\n",
-    "// time \n",
+    "// time 4.15s\n",
     "\n",
     "// run 3\n",
-    "// time "
+    "// time 4.20s"
    ]
   },
   {
