--- a/notebooks/Compare Performance/Gaussians 100000/RefImpl Performance Gaussians100000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 100000/RefImpl Performance Gaussians100000.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook measures the Reference HDBSCAN* implementation performance with the Gaussian 50000 data"
+    "## This notebook measures the Reference HDBSCAN* implementation performance with the Gaussian 100000 data"
    ]
   },
   {
@@ -14,20 +14,20 @@
    "outputs": [],
    "source": [
     "# run 1\n",
-    "# time: s\n",
+    "# time: 437.3s\n",
     "\n",
     "# run 2\n",
-    "# time: \n",
+    "# time: 431.7s\n",
     "\n",
     "# run 3\n",
-    "# time: 104.5s"
+    "# time: 435.5s"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](images/refImplTrainTimeGauss50k.png \"Run 3\")"
+    "![alt text](images/refImplTrainTimeGauss100k.png \"Run 3\")"
    ]
   },
   {
