--- a/notebooks/Compare Performance/Gaussians 100000/Tribuo Predictions Performance Gaussians100000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 100000/Tribuo Predictions Performance Gaussians100000.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook measures Tribuo Hdbscan performance with the Gaussian 100000 data"
+    "## This notebook measures Tribuo Hdbscan Prediction performance with the Gaussian 100000 data"
    ]
   },
   {
@@ -68,13 +68,13 @@
     "regexMappingProcessors.put(\"Feature2\", new DoubleFieldProcessor(\"Feature2\"));\n",
     "regexMappingProcessors.put(\"Feature3\", new DoubleFieldProcessor(\"Feature3\"));\n",
     "regexMappingProcessors.put(\"Feature4\", new DoubleFieldProcessor(\"Feature4\"));\n",
-    "regexMappingProcessors.put(\"Feature5\", new DoubleFieldProcessor(\"Feature5\"));\n",
-    "regexMappingProcessors.put(\"Feature6\", new DoubleFieldProcessor(\"Feature6\"));\n",
-    "regexMappingProcessors.put(\"Feature7\", new DoubleFieldProcessor(\"Feature7\"));\n",
     "\n",
     "RowProcessor<ClusterID> rowProcessor = new RowProcessor<>(emptyResponseProcessor, regexMappingProcessors);\n",
-    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/xtrabig-gaussians-6centers.csv\"), rowProcessor, false);\n",
-    "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);"
+    "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/xtrabig-gaussians-6centers-train.csv\"), rowProcessor, false);\n",
+    "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);\n",
+    "\n",
+    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/xtrabig-gaussians-6centers-predict.csv\"),rowProcessor,false);\n",
+    "Dataset<ClusterID> predictSet = new MutableDataset<>(csvTestSource);\n"
    ]
   },
   {
@@ -86,42 +86,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data size = 100000, number of features = 7\n"
+      "Data size = 60000, number of features = 4\n",
+      "Predict Data size = 40000, number of features = 4\n"
      ]
     }
    ],
    "source": [
-    "System.out.println(String.format(\"Data size = %d, number of features = %d\",dataset.size(),dataset.getFeatureMap().size()));\n"
+    "System.out.println(String.format(\"Data size = %d, number of features = %d\",dataset.size(),dataset.getFeatureMap().size()));\n",
+    "System.out.println(String.format(\"Predict Data size = %d, number of features = %d\",predictSet.size(),predictSet.getFeatureMap().size()));\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training took (00:04:59:151)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var trainer = new HdbscanTrainer(10, HdbscanTrainer.Distance.EUCLIDEAN, 10, 8);\n",
-    "var startTime = System.currentTimeMillis();\n",
-    "var model = trainer.train(dataset);\n",
-    "var endTime = System.currentTimeMillis();\n",
-    "System.out.println(\"Training took \" + Util.formatDuration(startTime,endTime));\n",
-    "\n",
-    "// run 1\n",
-    "// time 303.5s\n",
-    "\n",
-    "// run 2\n",
-    "// time 311.1s\n",
-    "\n",
-    "// run 3\n",
-    "// time 299.2s"
+    "var model = trainer.train(dataset);"
    ]
   },
   {
@@ -133,12 +115,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000\n"
+      "60000\n"
      ]
     }
    ],
    "source": [
     "System.out.println(model.getClusterLabels().size());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting took (00:00:00:369)\n"
+     ]
+    }
+   ],
+   "source": [
+    "var startTime = System.currentTimeMillis();\n",
+    "List<Prediction<ClusterID>> predictions = model.predict(predictSet);\n",
+    "var endTime = System.currentTimeMillis();\n",
+    "System.out.println(\"Predicting took \" + Util.formatDuration(startTime,endTime));\n",
+    "\n",
+    "// run 1\n",
+    "// time 0.42s\n",
+    "\n",
+    "// run 2\n",
+    "// time 0.43s\n",
+    "\n",
+    "// run 3\n",
+    "// time 0.37s"
    ]
   },
   {
