--- a/notebooks/Compare Performance/Gaussians 100000/hdbscan Performance Gaussians100000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 100000/hdbscan Performance Gaussians100000.ipynb
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.8 s, sys: 315 ms, total: 18.1 s\n",
-      "Wall time: 30.5 s\n"
+      "CPU times: user 16.8 s, sys: 274 ms, total: 17.1 s\n",
+      "Wall time: 29.1 s\n"
      ]
     }
    ],
@@ -67,10 +67,10 @@
     "# time: 30.5s\n",
     "\n",
     "# run 2\n",
-    "# time: \n",
+    "# time: 26.9s\n",
     "\n",
     "# run 3\n",
-    "# time: "
+    "# time: 29.1s"
    ]
   },
   {
