--- a/notebooks/Compare Performance/Gaussians 100000/hdbscan Predictions Performance Gaussians100000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 100000/hdbscan Predictions Performance Gaussians100000.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook measures Python hdbscan performance with the credit card data"
+    "## This notebook measures Python hdbscan Prediction performance with the Gaussian 100000 data"
    ]
   },
   {
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# same as /Users/gstewart/temp/development/mscs/cpsc69700/RefImpl/HDBSCAN_Star/cleanedCC.csv but with headers\n",
-    "df = pd.read_csv('../../../data/cleanedCC.csv')"
+    "df_train = pd.read_csv('../../../data/xtrabig-gaussians-6centers-train.csv')\n",
+    "df_predict = pd.read_csv('../../../data/xtrabig-gaussians-6centers-predict.csv')"
    ]
   },
   {
@@ -39,56 +39,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8949, 17)\n"
+      "(60000, 7)\n",
+      "(40000, 7)\n"
      ]
     }
    ],
    "source": [
-    "print(df.shape)"
+    "print(df_train.shape)\n",
+    "print(df_predict.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.69 s, sys: 18.3 ms, total: 1.71 s\n",
-      "Wall time: 1.74 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%time clusterer = hdbscan.HDBSCAN(min_cluster_size=5, prediction_data=True).fit(df)\n",
-    "# run 1\n",
-    "# time: 1.54s\n",
-    "\n",
-    "# run 2\n",
-    "# time: 1.91s\n",
-    "\n",
-    "# run 3\n",
-    "# time: 1.74"
+    "clusterer = hdbscan.HDBSCAN(min_cluster_size=10, prediction_data=True).fit(df_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(clusterer.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8949\n"
+      "CPU times: user 7.17 s, sys: 63.8 ms, total: 7.23 s\n",
+      "Wall time: 7.39 s\n"
      ]
     }
    ],
    "source": [
-    "hdbscan_label_list = clusterer.labels_.tolist()\n",
-    "print(len(hdbscan_label_list ))"
+    "%time hdbscan_predict_labels, strengths = hdbscan.approximate_predict(clusterer, df_predict)\n",
+    "# run 1\n",
+    "# time: 7.25s\n",
+    "\n",
+    "# run 2\n",
+    "# time: 6.79s\n",
+    "\n",
+    "# run 3\n",
+    "# time: 7.39s"
    ]
   },
   {
