--- a/notebooks/Compare Performance/Gaussians 50000/RefImpl Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/RefImpl Performance Gaussians50000.ipynb
@@ -14,10 +14,10 @@
    "outputs": [],
    "source": [
     "# run 1\n",
-    "# time: s\n",
+    "# time: 107.6s\n",
     "\n",
     "# run 2\n",
-    "# time: \n",
+    "# time: 107.3s\n",
     "\n",
     "# run 3\n",
     "# time: 104.5s"
