--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
@@ -103,25 +103,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took (00:01:25:574)\n"
+      "Training took (00:01:13:464)\n"
      ]
     }
    ],
    "source": [
-    "var trainer = new HdbscanTrainer(10, HdbscanTrainer.Distance.EUCLIDEAN, 10, 4);\n",
+    "var trainer = new HdbscanTrainer(10, HdbscanTrainer.Distance.EUCLIDEAN, 10, 8);\n",
     "var startTime = System.currentTimeMillis();\n",
     "var model = trainer.train(dataset);\n",
     "var endTime = System.currentTimeMillis();\n",
     "System.out.println(\"Training took \" + Util.formatDuration(startTime,endTime));\n",
     "\n",
     "// run 1\n",
-    "// time 85.6s\n",
+    "// time 72.7s\n",
     "\n",
     "// run 2\n",
-    "// time \n",
+    "// time 80.3s\n",
     "\n",
     "// run 3\n",
-    "// time "
+    "// time 73.5"
    ]
   },
   {
