--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Predictions Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Predictions Performance Gaussians50000.ipynb
@@ -73,7 +73,7 @@
     "CSVDataSource<ClusterID> csvDataSource = new CSVDataSource<>(Paths.get(\"../../../data/verybig-gaussians-6centers-train.csv\"), rowProcessor, false);\n",
     "Dataset<ClusterID> dataset = new MutableDataset<>(csvDataSource);\n",
     "\n",
-    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/verybig-gaussians-6centers.csv\"),rowProcessor,false);\n",
+    "CSVDataSource<ClusterID> csvTestSource = new CSVDataSource<>(Paths.get(\"../../../data/verybig-gaussians-6centers-predict.csv\"),rowProcessor,false);\n",
     "Dataset<ClusterID> predictSet = new MutableDataset<>(csvTestSource);\n"
    ]
   },
@@ -87,7 +87,7 @@
      "output_type": "stream",
      "text": [
       "Data size = 30000, number of features = 4\n",
-      "Predict Data size = 50000, number of features = 4\n"
+      "Predict Data size = 20000, number of features = 4\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var trainer = new HdbscanTrainer(8, HdbscanTrainer.Distance.EUCLIDEAN, 8, 2);\n",
+    "var trainer = new HdbscanTrainer(10, HdbscanTrainer.Distance.EUCLIDEAN, 10, 8);\n",
     "var model = trainer.train(dataset);"
    ]
   },
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting took (00:00:00:381)\n"
+      "Predicting took (00:00:00:236)\n"
      ]
     }
    ],
@@ -150,13 +150,13 @@
     "System.out.println(\"Predicting took \" + Util.formatDuration(startTime,endTime));\n",
     "\n",
     "// run 1\n",
-    "// time 0.38s\n",
+    "// time 0.26s\n",
     "\n",
     "// run 2\n",
-    "// time \n",
+    "// time 0.33s\n",
     "\n",
     "// run 3\n",
-    "// time "
+    "// time 0.24s"
    ]
   },
   {
