--- a/notebooks/Compare Performance/Gaussians 50000/hdbscan Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/hdbscan Performance Gaussians50000.ipynb
@@ -49,28 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.34 s, sys: 63.5 ms, total: 4.4 s\n",
-      "Wall time: 6.85 s\n"
+      "CPU times: user 4.87 s, sys: 146 ms, total: 5.01 s\n",
+      "Wall time: 9.39 s\n"
      ]
     }
    ],
    "source": [
     "%time clusterer = hdbscan.HDBSCAN(min_cluster_size=10, prediction_data=True).fit(df)\n",
     "# run 1\n",
-    "# time: 5.98s\n",
+    "# time: 8.58s\n",
     "\n",
     "# run 2\n",
-    "# time: \n",
+    "# time: 7.85s\n",
     "\n",
     "# run 3\n",
-    "# time: "
+    "# time: 9.39s"
    ]
   },
   {
