--- a/notebooks/Compare Performance/Gaussians 50000/hdbscan Predictions Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/hdbscan Predictions Performance Gaussians50000.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusterer = hdbscan.HDBSCAN(min_cluster_size=8, prediction_data=True).fit(df_train)"
+    "clusterer = hdbscan.HDBSCAN(min_cluster_size=10, prediction_data=True).fit(df_train)"
    ]
   },
   {
@@ -83,29 +83,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.17 s, sys: 14.5 ms, total: 2.19 s\n",
-      "Wall time: 2.2 s\n"
+      "CPU times: user 2.71 s, sys: 26.6 ms, total: 2.74 s\n",
+      "Wall time: 2.79 s\n"
      ]
     }
    ],
    "source": [
     "%time hdbscan_predict_labels, strengths = hdbscan.approximate_predict(clusterer, df_predict)\n",
     "# run 1\n",
-    "# time: 2.2s\n",
+    "# time: 2.68s\n",
     "\n",
     "# run 2\n",
-    "# time: \n",
+    "# time: 2.71s\n",
     "\n",
     "# run 3\n",
-    "# time:"
+    "# time: 2.79s"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
