controlled executions of the performance tests with latest jar version

--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took (00:01:13:464)\n"
+      "Training took (00:01:11:976)\n"
      ]
     }
    ],
@@ -115,13 +115,13 @@
     "System.out.println(\"Training took \" + Util.formatDuration(startTime,endTime));\n",
     "\n",
     "// run 1\n",
-    "// time 72.7s\n",
+    "// time 74.5s\n",
     "\n",
     "// run 2\n",
-    "// time 80.3s\n",
+    "// time 86.7s\n",
     "\n",
     "// run 3\n",
-    "// time 73.5"
+    "// time 72.0s"
    ]
   },
   {
