perform correctness tests after round one of PR review changes

--- a/notebooks/Compare Labels and Outlier Scores/Credit Card/Tribuo vs RefImpl Labels and Outlier Scores Credit Card.ipynb
+++ b/notebooks/Compare Labels and Outlier Scores/Credit Card/Tribuo vs RefImpl Labels and Outlier Scores Credit Card.ipynb
@@ -283,7 +283,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "12.0.2+10"
+   "version": "11.0.12+8-LTS-237"
   }
  },
  "nbformat": 4,
