correctness tests after PR review changes, tests with latest jar, all good

--- a/notebooks/Compare Performance/Credit Card/hdbscan Performance Credit Card.ipynb
+++ b/notebooks/Compare Performance/Credit Card/hdbscan Performance Credit Card.ipynb
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.67 s, sys: 18.5 ms, total: 1.69 s\n",
-      "Wall time: 1.74 s\n"
+      "CPU times: user 1.88 s, sys: 36.5 ms, total: 1.92 s\n",
+      "Wall time: 2.25 s\n"
      ]
     }
    ],
@@ -70,7 +70,10 @@
     "# time: 1.92s\n",
     "\n",
     "# run 3\n",
-    "# time: 1.74"
+    "# time: 1.74\n",
+    "\n",
+    "# premerge\n",
+    "# time: 2.25s"
    ]
   },
   {
