--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Performance Gaussians50000.ipynb
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took (00:01:11:976)\n"
+      "Training took (00:01:27:867)\n"
      ]
     }
    ],
@@ -121,7 +121,10 @@
     "// time 86.7s\n",
     "\n",
     "// run 3\n",
-    "// time 72.0s"
+    "// time 72.0s\n",
+    "\n",
+    "// premerge\n",
+    "// time 87.8s"
    ]
   },
   {
@@ -161,7 +164,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "12.0.2+10"
+   "version": "11.0.12+8-LTS-237"
   }
  },
  "nbformat": 4,
