--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Predictions Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Predictions Performance Gaussians50000.ipynb
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting took (00:00:00:255)\n"
+      "Predicting took (00:00:00:280)\n"
      ]
     }
    ],
@@ -156,7 +156,10 @@
     "// time 0.27s\n",
     "\n",
     "// run 3\n",
-    "// time 0.26s"
+    "// time 0.26s\n",
+    "\n",
+    "// premerge \n",
+    "// time 0.28s"
    ]
   },
   {
@@ -179,7 +182,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "12.0.2+10"
+   "version": "11.0.12+8-LTS-237"
   }
  },
  "nbformat": 4,
