--- a/notebooks/Compare Performance/Gaussians 50000/hdbscan Predictions Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/hdbscan Predictions Performance Gaussians50000.ipynb
@@ -83,8 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.29 s, sys: 15.2 ms, total: 2.3 s\n",
-      "Wall time: 2.32 s\n"
+      "CPU times: user 2.52 s, sys: 27 ms, total: 2.55 s\n",
+      "Wall time: 2.7 s\n"
      ]
     }
    ],
@@ -97,7 +97,10 @@
     "# time: 2.37s\n",
     "\n",
     "# run 3\n",
-    "# time: 2.32s"
+    "# time: 2.32s\n",
+    "\n",
+    "# premerge\n",
+    "# time: 2.7s"
    ]
   },
   {
