--- a/notebooks/Compare Predictions/Tribuo Unit Tests/Tribuo Predictions Tribuo Unit Tests.ipynb
+++ b/notebooks/Compare Predictions/Tribuo Unit Tests/Tribuo Predictions Tribuo Unit Tests.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "12.0.2+10"
+   "version": "11.0.12+8-LTS-237"
   }
  },
  "nbformat": 4,
