--- a/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
+++ b/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took (00:00:03:948)\n"
+      "Training took (00:00:04:168)\n"
      ]
     }
    ],
@@ -131,7 +131,10 @@
     "// time 4.11s\n",
     "\n",
     "// run 3\n",
-    "// time 3.95s"
+    "// time 3.95s\n",
+    "\n",
+    "// premerge\n",
+    "// time 4.17s"
    ]
   },
   {
@@ -171,7 +174,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "12.0.2+10"
+   "version": "11.0.12+8-LTS-237"
   }
  },
  "nbformat": 4,
