--- a/notebooks/Compare Performance/Gaussians 50000/hdbscan Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/hdbscan Performance Gaussians50000.ipynb
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.41 s, sys: 141 ms, total: 5.55 s\n",
-      "Wall time: 10.1 s\n"
+      "CPU times: user 5.07 s, sys: 165 ms, total: 5.24 s\n",
+      "Wall time: 11.9 s\n"
      ]
     }
    ],
@@ -70,7 +70,10 @@
     "# time: 10.3s\n",
     "\n",
     "# run 3\n",
-    "# time: 10.1s"
+    "# time: 10.1s\n",
+    "\n",
+    "# premerge\n",
+    "# time: 11.9s "
    ]
   },
   {
